crates/sifr_python_parser/tests/snapshots/valid_syntax@params_non_default_after_star.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/params_non_default_after_star.py
---
## AST

```
Module(
    ModModule {
        range: 0..72,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..33,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..28,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..12,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: "a",
                                        range: 8..9,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 10..12,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 17..18,
                                parameter: Parameter {
                                    range: 17..18,
                                    name: Identifier {
                                        id: "b",
                                        range: 17..18,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 20..24,
                                parameter: Parameter {
                                    range: 20..21,
                                    name: Identifier {
                                        id: "c",
                                        range: 20..21,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 22..24,
                                            value: Int(
                                                11,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                range: 26..27,
                                parameter: Parameter {
                                    range: 26..27,
                                    name: Identifier {
                                        id: "d",
                                        range: 26..27,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 30..33,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 30..33,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 34..71,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 38..41,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 41..66,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 42..46,
                                parameter: Parameter {
                                    range: 42..43,
                                    name: Identifier {
                                        id: "a",
                                        range: 42..43,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 44..46,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 48..53,
                                name: Identifier {
                                    id: "args",
                                    range: 49..53,
                                },
                                annotation: None,
                                convention: Default,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 55..56,
                                parameter: Parameter {
                                    range: 55..56,
                                    name: Identifier {
                                        id: "b",
                                        range: 55..56,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 58..62,
                                parameter: Parameter {
                                    range: 58..59,
                                    name: Identifier {
                                        id: "c",
                                        range: 58..59,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 60..62,
                                            value: Int(
                                                11,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                range: 64..65,
                                parameter: Parameter {
                                    range: 64..65,
                                    name: Identifier {
                                        id: "d",
                                        range: 64..65,
                                    },
                                    annotation: None,
                                    convention: Default,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 68..71,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
