crates/sifr_python_parser/tests/snapshots/valid_syntax@simple_stmts_in_block.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/simple_stmts_in_block.py
---
## AST

```
Module(
    ModModule {
        range: 0..84,
        body: [
            If(
                StmtIf {
                    range: 0..13,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                range: 9..13,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            If(
                StmtIf {
                    range: 14..27,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            range: 17..21,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                range: 23..27,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            If(
                StmtIf {
                    range: 29..52,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            range: 32..36,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                range: 38..42,
                            },
                        ),
                        Continue(
                            StmtContinue {
                                range: 44..52,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            If(
                StmtIf {
                    range: 53..76,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            range: 56..60,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                range: 62..66,
                            },
                        ),
                        Continue(
                            StmtContinue {
                                range: 68..76,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Assign(
                StmtAssign {
                    range: 78..83,
                    targets: [
                        Name(
                            ExprName {
                                range: 78..79,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 82..83,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
